--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "start": "vite",
     "test": "echo \"Error: no test specified\" && exit 1", 
     "tailwind:watch": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
-
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.17.0",
     "framer-motion": "^11.18.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.344.0",
