--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "vite",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "tailwind:watch": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    "test": "vitest",
+    "tailwind:watch": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
+    "preprocess": "node scripts/preprocess.js",
+    "train": "node scripts/train.js"
   },
   "dependencies": {
     "@tensorflow/tfjs": "^4.17.0",
+    "@tensorflow/tfjs-node": "^4.17.0",
+    "canvas": "^2.11.2",
     "framer-motion": "^11.18.2",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pdf": "^9.2.1",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -36,6 +41,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vitest": "^1.3.1"
   }
 }
